--- a/ui/dashboard/projects/utask-lib/src/lib/@components/tasks-list/tasks-list.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@components/tasks-list/tasks-list.html
@@ -47,9 +47,11 @@
                     (nzCheckedChange)="clickCheckTask(item.id, $event)">
                 </td>
                 <td>
-                    <a [routerLink]="options.routingTaskPath+item.id" title="{{item.title}}">{{item.title}}</a>
+                    <a [routerLink]="options.routingTaskPath+item.id" [title]="item.title">{{item.title}}</a>
                     <br />
                     <small>{{item.id}}</small>
+                    <i class="tags" nz-icon nzType="tags" nzTheme="outline" [nzTooltipTitle]="tooltip" nz-tooltip
+                        *ngIf="item.tags"></i>
                 </td>
                 <td>
                     <lib-utask-task-status [task]="item"></lib-utask-task-status>
@@ -91,6 +93,16 @@
                         </ul>
                     </nz-dropdown-menu>
                 </td>
+                <ng-template #tooltip>
+                    <ng-container *ngIf="item.tags">
+                        Tags
+                        <ul>
+                            <ng-container *ngFor="let key of objectKeys(item.tags)">
+                                <li>{{key}}:{{item.tags[key]}}</li>
+                            </ng-container>
+                        </ul>
+                    </ng-container>
+                </ng-template>
             </tr>
             <tr *ngIf="index === tasks.length-1 && hasMore">
                 <td [nzAlign]="'center'" [attr.colspan]="options?.disableBulk ? 6 : 7">
