--- a/ui/dashboard/projects/utask-lib/src/lib/@routes/task/task.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@routes/task/task.html
@@ -62,15 +62,15 @@
     <lib-utask-box [header]="{openable: true, init: display.request, class: 'primary'}">
         <div app-box-header>
             Request - {{task.id}}
-            <nz-button-group nzSize="small">
-                <button type="button" nz-button title="View as code"
-                    (click)="previewTask(); $event.stopPropagation();"><i nz-icon nzType="file-text"></i></button>
-                <button type="button" nz-button title="Edit the task"
-                    (click)="editRequest(task); $event.stopPropagation();"><i nz-icon nzType="edit"></i></button>
-                <button type="button" nz-button title="Delete the task"
-                    (click)="deleteTask(task.id); $event.stopPropagation();"><i nz-icon nzType="delete"></i></button>
-            </nz-button-group>
         </div>
+        <nz-button-group nzSize="small" app-box-header-extra>
+            <button type="button" nz-button title="View as code" (click)="previewTask(); $event.stopPropagation();"><i
+                    nz-icon nzType="file-text"></i></button>
+            <button type="button" nz-button title="Edit the task"
+                (click)="editRequest(task); $event.stopPropagation();"><i nz-icon nzType="edit"></i></button>
+            <button type="button" nz-button title="Delete the task"
+                (click)="deleteTask(task.id); $event.stopPropagation();"><i nz-icon nzType="delete"></i></button>
+        </nz-button-group>
         <div app-box-content>
             <nz-descriptions *ngIf="task.input" nzBordered [nzSize]="'small'" [nzColumn]="1">
                 <nz-descriptions-item nzTitle="Template">
@@ -117,6 +117,8 @@
                     ===
                     'ERROR' ? ' (retrying)' : ''}}</small>
                 <span *ngIf="loaders.execution || loaders.refreshTask">&nbsp;<i nz-icon nzType="loading"></i></span>
+            </div>
+            <div app-box-header-extra>
                 <nz-button-group nzSize="small">
                     <button type="button" nz-button title="Run" (click)="runResolution(resolution)"><i nz-icon
                             nzType="caret-right"></i></button>
