--- a/ui/dashboard/src/index.html
+++ b/ui/dashboard/src/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Utask UI</title>
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="assets/favicon.ico" />
 </head>
