feat: add waiting state for subtasks steps
Signed-off-by: Thomas Bétrancourt <thomas@betrancourt.net>

--- a/ui/dashboard/projects/utask-lib/src/lib/@routes/tasks/tasks.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@routes/tasks/tasks.html
@@ -24,6 +24,7 @@
                         <nz-option nzValue="RUNNING" nzLabel="Running"></nz-option>
                         <nz-option nzValue="TODO" nzLabel="Todo"></nz-option>
                         <nz-option nzValue="WONTFIX" nzLabel="Wontfix"></nz-option>
+                        <nz-option nzValue="WAITING" nzLabel="Waiting"></nz-option>
                     </nz-select>
                 </nz-form-control>
             </nz-form-item>
