--- a/ui/dashboard/projects/utask-lib/src/lib/@routes/tasks/tasks.html
+++ b/ui/dashboard/projects/utask-lib/src/lib/@routes/tasks/tasks.html
@@ -25,6 +25,7 @@
                         <nz-option nzValue="TODO" nzLabel="Todo"></nz-option>
                         <nz-option nzValue="WONTFIX" nzLabel="Wontfix"></nz-option>
                         <nz-option nzValue="WAITING" nzLabel="Waiting"></nz-option>
+                        <nz-option nzValue="DELAYED" nzLabel="Delayed"></nz-option>
                     </nz-select>
                 </nz-form-control>
             </nz-form-item>
